--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
 asgiref==3.8.1
+click==8.1.8
+colorama==0.4.6
+coverage==7.8.0
 Django==5.2
 django-cors-headers==4.7.0
 django-filter==25.1
+django-rq==3.0.1
 djangorestframework==3.16.0
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.5.0
+pytest==8.3.5
+pytest-django==4.11.1
+redis==6.0.0
+rq==2.3.2
 sqlparse==0.5.3
 tzdata==2025.2
