--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ djangorestframework==3.16.0
 iniconfig==2.1.0
 packaging==25.0
 pluggy==1.5.0
+psycopg==3.2.7
 pytest==8.3.5
 pytest-django==4.11.1
 redis==6.0.0
 rq==2.3.2
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
