--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ iniconfig==2.1.0
 packaging==25.0
 pluggy==1.5.0
 psycopg==3.2.7
+psycopg2==2.9.10
 pytest==8.3.5
 pytest-django==4.11.1
+python-dotenv==1.1.0
 redis==6.0.0
 rq==2.3.2
 sqlparse==0.5.3
