--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,5 +1,5 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-DJANGO_SETTINGS_MODULE = test.settings
+DJANGO_SETTINGS_MODULE = videoflix_backend.settings
 # -- recommended but optional:
-python_files = tests.py test_*.py *_tests.py
+python_files = tests/test_*.py
