--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       db:
         condition: service_healthy
         restart: true
+      redis:
+        condition: service_started
     env_file:
       - .env
   db:
@@ -27,6 +29,18 @@ services:
       retries: 6
       start_period: 30s
       timeout: 10s
+
+  redis:
+    image: redis:7
+    container_name: videoflix_redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 6
+      start_period: 5s
 
 
 volumes:
