--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,7 @@ pytest==8.3.5
 pytest-django==4.11.1
 python-dotenv==1.1.0
 redis==6.0.0
+django-redis>=5.3.0
 rq==2.3.2
 sqlparse==0.5.3
 typing_extensions==4.13.2
