--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,41 @@ services:
         condition: service_started
     env_file:
       - .env
+  rqworker_720p:
+    build: .
+    container_name: videoflix_rqworker_720p
+    command: python manage.py rqworker queue_720p
+    depends_on:
+      redis:
+        condition: service_started
+    volumes:
+      - ./src:/app
+    env_file:
+      - .env
+
+  rqworker_360p:
+    build: .
+    container_name: videoflix_rqworker_360p
+    command: python manage.py rqworker queue_360p
+    depends_on:
+      redis:
+        condition: service_started
+    volumes:
+      - ./src:/app
+    env_file:
+      - .env
+
+  rqworker_240p:
+    build: .
+    container_name: videoflix_rqworker_240p
+    command: python manage.py rqworker queue_240p
+    depends_on:
+      redis:
+        condition: service_started
+    volumes:
+      - ./src:/app
+    env_file:
+      - .env
   db:
     image: postgres:17
     container_name: postgres_db
