--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+certifi==2025.4.26
 click==8.1.8
 colorama==0.4.6
 coverage==7.8.0
@@ -21,3 +22,7 @@ rq==2.3.2
 sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.2
+requests==2.32.3
+charset-normalizer==3.4.2
+idna==3.10
+urllib3==2.4.0
