--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,25 @@ services:
       - ./src:/app
     env_file:
       - .env
+  rqworker_clear_token:
+    build: .
+    container_name: videoflix_rqworker_token
+    command: python manage.py rqworker queue_token
+    depends_on:
+      - redis:
+          condition: service_started
+    volumes: -./src/app
+    env_file:
+      - .env
+  rq-scheduler:
+    build: .
+    command: python manage.py rqscheduler
+    depends_on:
+      - redis
+    volumes:
+      - ./src/app
+    env_file:
+      - .env
   db:
     image: postgres:17
     container_name: postgres_db
@@ -59,7 +78,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 10s
       retries: 6
       start_period: 30s
@@ -71,12 +90,11 @@ services:
     ports:
       - "6379:6379"
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 6
       start_period: 5s
-
 
 volumes:
   postgres_db:
