--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.8.1
 certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 coverage==7.8.0
+croniter==1.4.1
 Django==5.2
 django-cors-headers==4.7.0
 django-filter==25.1
+django-redis==5.4.0
 django-rq==3.0.1
+django-rq-scheduler==2023.9.0
 djangorestframework==3.16.0
+idna==3.10
 iniconfig==2.1.0
 packaging==25.0
 pluggy==1.5.0
@@ -15,14 +20,13 @@ psycopg==3.2.7
 psycopg2==2.9.10
 pytest==8.3.5
 pytest-django==4.11.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 redis==6.0.0
-django-redis>=5.3.0
-rq==2.3.2
+requests==2.32.3
+rq==1.16.2
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.2
-requests==2.32.3
-charset-normalizer==3.4.2
-idna==3.10
 urllib3==2.4.0
