--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,9 +54,10 @@ services:
     container_name: videoflix_rqworker_token
     command: python manage.py rqworker queue_token
     depends_on:
-      - redis:
-          condition: service_started
-    volumes: -./src/app
+      redis:
+        condition: service_started
+    volumes:
+      - ./src:/app
     env_file:
       - .env
   rq-scheduler:
@@ -65,7 +66,7 @@ services:
     depends_on:
       - redis
     volumes:
-      - ./src/app
+      - ./src:/app
     env_file:
       - .env
   db:
