--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,6 @@
-SECRET_KEY='your-super-secret-key'
+SECRET_KEY="your-super-secret-key"
 
-ALLOWED_HOSTS='127.0.0.1', 'localhost', 'your-domain-name.com'
+ALLOWED_HOSTS=127.0.0.1,localhost,your-domain-name.com
 
 DEBUG=False
 
@@ -12,4 +12,6 @@ DB_PORT=5432
 
 RQ_PORT=6379
 
-EMAIL_CONFIRM_URL='domain-name-for-php-files.com'
+#both may be the same but not necessary
+EMAIL_CONFIRM_URL=https://domain-name-for-php-files-and-logo.com
+FRONTEND_URL=https://domain-name-for-frontend.com
