updated env template for php

--- a/.env-template
+++ b/.env-template
@@ -12,6 +12,6 @@ DB_PORT=5432
 
 RQ_PORT=6379
 
-#both may be the same but not necessary
-EMAIL_CONFIRM_URL=https://domain-name-for-php-files-and-logo.com
+#pls load php and Logo.PNG in the frontend.server-main page
 FRONTEND_URL=https://domain-name-for-frontend.com
+MAIL_SERVER=info@videoflix.alexander-hardtke-backend.com
