--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,19 @@ services:
       - ./src:/app
     env_file:
       - .env
+  rqworker_144p:
+    build: .
+    container_name: videoflix_rqworker_144p
+    command: python manage.py rqworker queue_preview144p
+    depends_on:
+      web:
+        condition: service_started
+      redis:
+        condition: service_healthy
+    volumes:
+      - ./src:/app
+    env_file:
+      - .env
 
   rqworker_clear_token:
     build: .
