creating superuser iin docker-compose

--- a/.env-template
+++ b/.env-template
@@ -10,6 +10,10 @@ POSTGRES_PASSWORD=Userpassword
 DB_HOST=db
 DB_PORT=5432
 
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=supersecurepassword
+
 RQ_PORT=6379
 
 #pls load php and Logo.PNG in the frontend.server-main page
