created new system for upload without admin-panel

--- a/.env-template
+++ b/.env-template
@@ -10,6 +10,8 @@ POSTGRES_PASSWORD=Userpassword
 DB_HOST=db
 DB_PORT=5432
 
+#choose a username and password for Django superuser
+# superuser kann add new videos with /api/upload/ or with the /admin panel
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=supersecurepassword
