added types in .env

--- a/.env-template
+++ b/.env-template
@@ -18,6 +18,9 @@ DJANGO_SUPERUSER_PASSWORD=supersecurepassword
 
 RQ_PORT=6379
 
+# choose the video category that you want to upload
+VIDEO_TYPES=animals,nature,training,tutorials
+
 #pls load php and Logo.PNG in the frontend.server-main page
 FRONTEND_URL=https://domain-name-for-frontend.com
 MAIL_SERVER=info@videoflix.alexander-hardtke-backend.com
