updated env template info

--- a/.env-template
+++ b/.env-template
@@ -18,7 +18,8 @@ DJANGO_SUPERUSER_PASSWORD=supersecurepassword
 
 RQ_PORT=6379
 
-# choose the video category that you want to upload
+# choose the video categorys that you want to upload
+# also change the categorys in the frontend video.model.ts
 VIDEO_TYPES=animals,nature,training,tutorials
 
 #pls load php and Logo.PNG in the frontend.server-main page
