updated env template and readme

--- a/.env-template
+++ b/.env-template
@@ -1,27 +1,33 @@
+# Generate with the keygen.py file or create a secret key yourself
 SECRET_KEY="your-super-secret-key"
 
+# Add your domain-name for your backend server to it
 ALLOWED_HOSTS=127.0.0.1,localhost,your-domain-name.com
 
+# Set True if on developement mode
 DEBUG=False
 
+# Create a database name e.g. Videoflix
+# Create a username and password for the database
 POSTGRES_DB=DatabaseName
 POSTGRES_USER=Username
 POSTGRES_PASSWORD=Userpassword
 DB_HOST=db
 DB_PORT=5432
 
-#choose a username and password for Django superuser
-# superuser kann add new videos with /api/upload/ or with the /admin panel
+# Create a username and password for Django superuser with your email
+# Superuser can add new videos with /api/upload/ or with the /admin panel
+# Superuser can also add new staff members and superusers
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=supersecurepassword
 
 RQ_PORT=6379
 
-# choose the video categorys that you want to upload
-# also change the categorys in the frontend video.model.ts
+# Create video categorys that you want to upload for the videos
+# Don't forget to change the categorys int the frontend video.model.ts
 VIDEO_TYPES=animals,nature,training,tutorials
 
-#pls load php and Logo.PNG in the frontend.server-main page
+# Your Frontend-URL and your Mail-server for sending the registration mails
 FRONTEND_URL=https://domain-name-for-frontend.com
-MAIL_SERVER=info@videoflix.alexander-hardtke-backend.com
+MAIL_SERVER=info@videoflix.your-domain-name-backend.com
