updated settings and env-template

--- a/.env-template
+++ b/.env-template
@@ -31,3 +31,4 @@ VIDEO_TYPES=animals,nature,training,tutorials
 # Your Frontend-URL and your Mail-server for sending the registration mails
 FRONTEND_URL=https://domain-name-for-frontend.com
 MAIL_SERVER=info@videoflix.your-domain-name-backend.com
+BACKEND_URL=https://domain-name-for-backend.com
