--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - 8000:8000
     volumes:
       - ./src:/app
+      - ./static:/app/staticfiles
     depends_on:
       db:
         condition: service_healthy
