--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,6 +7,7 @@ coverage==7.8.0
 croniter==1.4.1
 crontab==1.0.4
 Django==5.2
+gunicorn>=21.2,<21.3
 django-cors-headers==4.7.0
 django-filter==25.1
 django-redis==5.4.0
