--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       sh -c "
         python manage.py migrate --noinput &&
         python manage.py ensure_superuser &&
-        gunicorn videoflix_backend.wsgi:application --bind 0.0.0.0:8000 --workers 4
+        python manage.py runserver 0.0.0.0:8000
       "
 
   rqworker_720p:
