--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     command: >-
       sh -c "
         python manage.py migrate --noinput &&
+        python manage.py collectstatic --noinput &&
         python manage.py ensure_superuser &&
         gunicorn videoflix_backend.wsgi:application --bind 0.0.0.0:8000 --workers 4
       "
