updated settings and deleted older dockerfile

--- a/.env.template
+++ b/.env.template
@@ -35,3 +35,6 @@ EMAIL_HOST_PASSWORD=your_email_user_password
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
 DEFAULT_FROM_EMAIL=default_from_email
+
+#Your FrontendURL
+FRONTEND_URL=https://domain-name-for-frontend.com
