--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-DJANGO_SETTINGS_MODULE = videoflix_backend.settings
+DJANGO_SETTINGS_MODULE = core.settings
 # -- recommended but optional:
 python_files = tests/test_*.py
