--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ cryptography==44.0.0
 Django==5.1.6
 django-cors-headers==4.7.0
 django-filter==25.1
+django-ipware==7.0.1
 django-redis==5.4.0
+django-rest-authemail==2.1.7
 django-rq==3.0.1
 djangorestframework==3.15.2
 freezegun==1.5.2
@@ -27,6 +29,7 @@ PyNaCl==1.5.0
 pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-ipware==3.0.0
 redis==6.2.0
 requests==2.32.3
 rq==2.3.3
