--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-redis==5.4.0
 django-rest-authemail==2.1.7
 django-rq==3.0.1
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
 freezegun==1.5.2
 gunicorn==23.0.0
 idna==3.10
@@ -24,7 +25,7 @@ paramiko==3.5.0
 pluggy==1.6.0
 psycopg2-binary==2.9.10
 pycparser==2.22
-PyJWT==2.10.1
+PyJWT==2.9.0
 PyNaCl==1.5.0
 pytest==8.3.5
 python-dateutil==2.9.0.post0
